# standalone-parity-evm

./: Cargo.toml  README.md  circle.yml
src/: lib.rs
