[package]
name = "standalone_parity_evm"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "GPL-3.0"
repository = "https://github.com/axic/standalone-parity-evm"
description = "Exposes Parity's EVM as a standalone crate"
publish = false

[dependencies]
evm = { path = "parity-ethereum/ethcore/evm" }
vm = { path = "parity-ethereum/ethcore/vm" }
ethereum-types = "0.4"
parity-bytes = { git = "https://github.com/paritytech/parity-common", rev = "8ebc5c8" }
